
add_executable(Linux-Debugger
    "main.cpp"
    "SmartDescriptor/SmartDescriptor.h"
    "Process/Process.h"
    "Process/Process.cpp"
    "Process/Module/Maps.h"
    "Process/Module/Maps.cpp"
    "Process/Module/Module.h"
    "Process/Thread/Thread.h"
    "Process/Thread/Thread.cpp"
    "Process/Thread/ThreadList.h"
    "Process/Thread/ThreadList.cpp"
)